fix(mobile): align navigation menu

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <meta name="copyright" content="Copyright (c) 2012 Peak Shift Inc.">
 <meta name="revisit-after" content="3 days">
 
-<!-- Teh Styles -->
+<!-- The Styles -->
 <link href="assets/css/master.css" rel="stylesheet" type="text/css">
 
 </head>
@@ -34,13 +34,14 @@
 <div id="wrapper">
 	<aside id="mainSide" class="column">
 	  <div class="padded">	
-		<h1 id="logo"><a href="//peakshift.com/portfolio"><img src="assets/i/logo.png"></a></h1>
-		<h2 style="color: #FFF;margin: 3em 0 0;">We craft digital products for web &amp; mobile.</h2>
-		<p class="intro">From concept and research to design and development, we're a small studio focused on helping you bring your idea to market.</p>
-		<li style="background-color:#fff; color:#5A020E">Demo clients</li>
-		<li style="background-color:#fff"><a href="portfolio/melon" data-fetch="/item/melon.html">Melon:Design</a></li>
-		<li style="background-color:#fff"><a href="portfolio/huu" data-fetch="/item/huu.html">Hu'u</a></li>
-
+  		<div id="logo"><a href="//peakshift.com/portfolio"><img src="assets/i/logo.svg"></a></div>
+  		<h2 style="color: #FFF;margin: 3em 0 0;">We craft digital products for web &amp; mobile.</h2>
+  		<p class="intro">From concept and research to design and development, we're a small studio focused on helping you bring your idea to market.</p>
+      <ul class="portfolio">
+    		<li>Demo clients</li>
+    		<li><a href="portfolio/melon" data-fetch="/item/melon.html">Melon:Design</a></li>
+    		<li><a href="portfolio/huu" data-fetch="/item/huu.html">Hu'u</a></li>
+      </ul>
   		<div class="contact-footer typeface-colour-secondary">
     		<hr>
   		  <div class="columns">
@@ -57,7 +58,6 @@
   		  </div>
     		<p class="typeface-colour-secondary rs small"><small><em>All Rights Reserved. Copyright © Peak Shift Inc. 2014</em></small></p>
   		</div>
-
 	  </div>
 	</aside>
 	
