fix(items): change asset path to root directory

--- a/item/huu.html
+++ b/item/huu.html
@@ -1,4 +1,4 @@
-				<figure style="background-image:url('/portfolio/assets/content/blur-huu.jpg');"><div class="padded"><img class="fill" src="/portfolio/assets/content/huu.png"></div></figure>
+				<figure style="background-image:url('/assets/content/blur-huu.jpg');"><div class="padded"><img class="fill" src="/assets/content/huu.png"></div></figure>
 				<div class="contentArea padded clearfix">
 					<h3 class="projectTitle">Hu'u</h3>
 					<div class="projectDetails column">
