--- a/item/melon.html
+++ b/item/melon.html
@@ -1,4 +1,4 @@
-				<figure style="background-image:url('/portfolio/assets/content/blur-melon designs.jpg');"><div class="padded"><img class="fill" src="/portfolio/assets/content/melon designs.png"></div></figure>
+				<figure style="background-image:url('/assets/content/blur-melon designs.jpg');"><div class="padded"><img class="fill" src="/assets/content/melon designs.png"></div></figure>
 				<div class="contentArea padded clearfix">
 					<h3 class="projectTitle">Melon Designs</h3>
 					<div class="projectDetails column">
