--- a/item/all.html
+++ b/item/all.html
@@ -1,5 +1,5 @@
 				<li>
-					<figure style="background-image:url('/portfolio/assets/content/blur-melon designs.jpg');"><div class="padded"><img class="fill" src="/portfolio/assets/content/melon designs.png"></div></figure>
+					<figure style="background-image:url('/assets/content/blur-melon designs.jpg');"><div class="padded"><img class="fill" src="/assets/content/melon designs.png"></div></figure>
 					<div class="padded">
 						<h3 class="projectTitle">Melon Designs</h3>
 						<div class="projectDetails column"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>				
@@ -11,7 +11,7 @@
 					</div>
 				</li>
 				<li>
-					<figure style="background-image:url('/portfolio/assets/content/blur-jamecobs.jpg');"><div class="padded"><img class="fill" src="/portfolio/assets/content/jamecobs.png"></div></figure>
+					<figure style="background-image:url('/assets/content/blur-jamecobs.jpg');"><div class="padded"><img class="fill" src="/assets/content/jamecobs.png"></div></figure>
 					<div class="padded">
 						<h3 class="projectTitle">Jamecob's Construction</h3>
 						<div class="projectDetails column"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>				
@@ -23,7 +23,7 @@
 					</div>
 				</li>
 				<li>
-					<figure style="background-image:url('/portfolio/assets/content/blur-wakeup.jpg');"><div class="padded"><img class="fill" src="/portfolio/assets/content/wakeup.png"></div></figure>
+					<figure style="background-image:url('/assets/content/blur-wakeup.jpg');"><div class="padded"><img class="fill" src="/assets/content/wakeup.png"></div></figure>
 					<div class="padded">
 						<h3 class="projectTitle">WakeUp Saint Lucia</h3>
 						<div class="projectDetails column"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>				
@@ -35,7 +35,7 @@
 					</div>
 				</li>
 				<li>
-					<figure style="background-image:url('/portfolio/assets/content/blur-wow.jpg');"><div class="padded"><img class="fill" src="/portfolio/assets/content/wow.png"></div></figure>
+					<figure style="background-image:url('/assets/content/blur-wow.jpg');"><div class="padded"><img class="fill" src="/assets/content/wow.png"></div></figure>
 					<div class="padded">
 						<h3 class="projectTitle">World on Wireless</h3>
 						<div class="projectDetails column"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>				
@@ -47,7 +47,7 @@
 					</div>
 				</li>
 				<li>
-					<figure style="background-image:url('/portfolio/assets/content/blur-pkf.jpg');"><div class="padded"><img class="fill" src="/portfolio/assets/content/pkf.png"></div></figure>
+					<figure style="background-image:url('/assets/content/blur-pkf.jpg');"><div class="padded"><img class="fill" src="/assets/content/pkf.png"></div></figure>
 					<div class="padded">
 						<h3 class="projectTitle">PKF</h3>
 						<div class="projectDetails column"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>				
@@ -59,7 +59,7 @@
 					</div>
 				</li>
 				<li>
-					<figure style="background-image:url('/portfolio/assets/content/blur-huu.jpg');"><div class="padded"><img class="fill" src="/portfolio/assets/content/huu.png"></div></figure>
+					<figure style="background-image:url('/assets/content/blur-huu.jpg');"><div class="padded"><img class="fill" src="/assets/content/huu.png"></div></figure>
 					<div class="padded">
 						<h3 class="projectTitle">Hu'u</h3>
 						<div class="projectDetails column"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>				
@@ -71,7 +71,7 @@
 					</div>
 				</li>
 				<li>
-					<figure style="background-image:url('/portfolio/assets/content/blur-campbells.jpg');"><div class="padded"><img class="fill" src="/portfolio/assets/content/campbells.png"></div></figure>
+					<figure style="background-image:url('/assets/content/blur-campbells.jpg');"><div class="padded"><img class="fill" src="/assets/content/campbells.png"></div></figure>
 					<div class="padded">
 						<h3 class="projectTitle">Hu'u</h3>
 						<div class="projectDetails column"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>				
@@ -83,7 +83,7 @@
 					</div>
 				</li>
 				<li>
-					<figure style="background-image:url('/portfolio/assets/content/blur-rro.jpg');"><div class="padded"><img class="fill" src="/portfolio/assets/content/rro.png"></div></figure>
+					<figure style="background-image:url('/assets/content/blur-rro.jpg');"><div class="padded"><img class="fill" src="/assets/content/rro.png"></div></figure>
 					<div class="padded">
 						<h3 class="projectTitle">Railand Romain</h3>
 						<div class="projectDetails column"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>				
