--- a/index.html
+++ b/index.html
@@ -26,48 +26,67 @@
 <meta name="revisit-after" content="3 days">
 
 <!-- The Styles -->
-<link href="assets/css/master.css" rel="stylesheet" type="text/css">
+<link href="assets/css/master.css?v=0004" rel="stylesheet" type="text/css">
 
 </head>
 <body class="">
 
 <div id="wrapper">
-	<aside id="mainSide" class="column">
-	  <div class="padded">	
-  		<div id="logo"><a href="//peakshift.com/portfolio"><img src="assets/i/logo.svg"></a></div>
-  		<h2 style="color: #FFF;margin: 3em 0 0;">We craft digital products for web &amp; mobile.</h2>
-  		<p class="intro">From concept and research to design and development, we're a small studio focused on helping you bring your idea to market.</p>
+  <aside id="mainSide" class="column">
+    <div class="padded">  
+      <div id="logo"><a href="//peakshift.com/portfolio"><img src="assets/i/logo.svg"></a></div>
+      <h2 style="color: #FFF;margin: 3em 0 0;">We craft digital products for web &amp; mobile.</h2>
+      <p class="intro">From concept and research to design and development, we're a small studio focused on helping you bring your idea to market.</p>
       <ul class="portfolio">
-    		<li>Demo clients</li>
-    		<li><a href="portfolio/melon" data-fetch="/item/melon.html">Melon:Design</a></li>
-    		<li><a href="portfolio/huu" data-fetch="/item/huu.html">Hu'u</a></li>
+        <li>Demo clients</li>
+        <li><a href="/melon" data-fetch="/item/melon.html">Melon:Design</a></li>
+        <li><a href="/huu" data-fetch="/item/huu.html">Hu'u</a></li>
+        <li><a href="/mindsky" data-fetch="/item/mindsky.html">MindSky</a></li>
       </ul>
-  		<div class="contact-footer typeface-colour-secondary">
-    		<hr>
-  		  <div class="columns">
-      		<ul class="heading-typeface">
+      <div class="contact-footer typeface-colour-secondary">
+        <hr>
+        <div class="columns">
+          <ul class="heading-typeface">
             <li><span class="typeface-colour-white">›</span> PHONE: <a href="tel:+442032872811">+442032872811</a></li>
             <li><span class="typeface-colour-white">›</span> SKYPE: <a href="skype:peakshift?chat">peakshift</a></li>
-            <li><span class="typeface-colour-white">›</span> EMAIL: <a href="mailto:johns@peakshift.com">johns@peakshift.com</a></li>
-      		</ul>
-      		<ul class="heading-typeface">
+            <li><span class="typeface-colour-white">›</span> EMAIL: <a href="mailto:johns@peakshift.com">team@peakshift.com</a></li>
+          </ul>
+          <ul class="heading-typeface">
             <li>P.O. BOX RB2289,</li>
             <li>RODNEY BAY,</li>
             <li>SAINT LUCIA, WEST INDIES</li>
-      		</ul>
-  		  </div>
-    		<p class="typeface-colour-secondary rs small"><small><em>All Rights Reserved. Copyright © Peak Shift Inc. 2014</em></small></p>
-  		</div>
-	  </div>
-	</aside>
-	
-	<section id="mainContent" class="column">
-
-	</section>
+          </ul>
+          <ul class="heading-typeface">
+            <li>21B MOSKOVKSA STR,</li>
+            <li>SOFIA, 1000</li>
+            <li>BULGARIA</li>
+          </ul>
+        </div>
+        <p class="typeface-colour-secondary rs small"><small><em>All Rights Reserved. Copyright &copy; Peak Shift Inc. 2018</em></small></p>
+      </div>
+    </div>
+  </aside>
+  
+  <section id="mainContent" class="column">
+    <figure style="background-image:url('/assets/content/mindsky-bg.png');" class="active"><div class="padded"><img class="fill" src="/assets/content/mindsky-top.png?v=03"></div></figure>
+        <div class="contentArea padded clearfix">
+      <h3 class="projectTitle">MindSky</h3>
+          <div class="projectDetails column">
+          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>        
+          <ul class="projectMeta column">
+            <li><a href="#">Launch Project &rarr;</a></li>
+            <li>Lorem Ipsum Ltd.</li>
+            <li>2013</li>
+          </ul>
+        </div>
+  </section>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script src="//peakshift.com/routerjs/history.js"></script>
 <script src="//peakshift.com/routerjs/Router.js" type="text/javascript"></script>
-<script src="assets/js/scripts.js"></script>
+<script src="/assets/js/scripts.js?v0001"></script>
 </body>
 </html>
