style(footer): remove horizontal padding on mobile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <!-- META: seo -->
 
-<title>Peak Shift</title>
+<title>Peak Shift Ltd.</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
 <meta name="author" content="Peak Shift Inc.">
@@ -49,20 +49,22 @@
           <ul class="heading-typeface">
             <li><span class="typeface-colour-white">›</span> PHONE: <a href="tel:+442032872811">+442032872811</a></li>
             <li><span class="typeface-colour-white">›</span> SKYPE: <a href="skype:peakshift?chat">peakshift</a></li>
-            <li><span class="typeface-colour-white">›</span> EMAIL: <a href="mailto:johns@peakshift.com">team@peakshift.com</a></li>
+            <li><span class="typeface-colour-white">›</span> EMAIL: <a href="mailto:team@peakshift.com">team@peakshift.com</a></li>
           </ul>
           <ul class="heading-typeface">
+            <li><strong>CARIBBEAN</strong></li>
             <li>P.O. BOX RB2289,</li>
             <li>RODNEY BAY,</li>
             <li>SAINT LUCIA, WEST INDIES</li>
           </ul>
           <ul class="heading-typeface">
+            <li><strong>EUROPE</strong></li>
             <li>21B MOSKOVKSA STR,</li>
             <li>SOFIA, 1000</li>
             <li>BULGARIA</li>
           </ul>
         </div>
-        <p class="typeface-colour-secondary rs small"><small><em>All Rights Reserved. Copyright &copy; Peak Shift Inc. 2018</em></small></p>
+        <p class="typeface-colour-secondary rs small"><small><em>All Rights Reserved. Copyright &copy; Peak Shift Ltd. 2018</em></small></p>
       </div>
     </div>
   </aside>
