feat(footer): add linked social media icons

--- a/index.html
+++ b/index.html
@@ -47,11 +47,6 @@
         <hr>
         <div class="columns">
           <ul class="heading-typeface">
-            <li><span class="typeface-colour-white">›</span> PHONE: <a href="tel:+442032872811">+442032872811</a></li>
-            <li><span class="typeface-colour-white">›</span> SKYPE: <a href="skype:peakshift?chat">peakshift</a></li>
-            <li><span class="typeface-colour-white">›</span> EMAIL: <a href="mailto:team@peakshift.com">team@peakshift.com</a></li>
-          </ul>
-          <ul class="heading-typeface">
             <li><strong>CARIBBEAN</strong></li>
             <li>P.O. BOX RB2289,</li>
             <li>RODNEY BAY,</li>
@@ -63,6 +58,22 @@
             <li>SOFIA, 1000</li>
             <li>BULGARIA</li>
           </ul>
+          <ul class="heading-typeface">
+            <li><span class="typeface-colour-white">›</span> PHONE: <a href="tel:+442032872811">+442032872811</a></li>
+            <li><span class="typeface-colour-white">›</span> SKYPE: <a href="skype:peakshift?chat">peakshift</a></li>
+            <li><span class="typeface-colour-white">›</span> EMAIL: <a href="mailto:team@peakshift.com">team@peakshift.com</a></li>
+          </ul>
+          <p class="typeface-colour-secondary rs small">
+            <a href="//twitter.com/peakshift">
+              <img src="/assets/icons/twitter.svg" width="16" height="16">
+            </a>
+            <a href="//facebook.com/peakshift">
+              <img src="/assets/icons/facebook.svg" width="16" height="16">
+            </a>
+            <a href="//dribbble.com/jb">
+              <img src="/assets/icons/dribbble.svg" width="16" height="14" style="padding:2px 1 0;">
+            </a>
+          </p>
         </div>
         <p class="typeface-colour-secondary rs small"><small><em>All Rights Reserved. Copyright &copy; Peak Shift Ltd. 2018</em></small></p>
       </div>
@@ -74,9 +85,22 @@
         <div class="contentArea padded clearfix">
       <h3 class="projectTitle">MindSky</h3>
           <div class="projectDetails column">
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h4>Technologies Used</h4>
+            <ul>
+              <li>AWS Lambdas</li>
+              <li>AWS EC2</li>
+              <li>Docker</li>
+              <li>Terraform</li>
+              <li>Node.js</li>
+              <li>Vue.js</li>
+              <li>Vuex</li>
+              <li>GraphQL</li>
+              <li>MySQL</li>
+              <li>MongoDB</li>
+            </ul>
           </div>        
           <ul class="projectMeta column">
             <li><a href="#">Launch Project &rarr;</a></li>
