style(typography): use arrows as bullets for unordered-lists

--- a/index.html
+++ b/index.html
@@ -81,33 +81,37 @@
   </aside>
   
   <section id="mainContent" class="column">
-    <figure style="background-image:url('/assets/content/mindsky-bg.png');" class="active"><div class="padded"><img class="fill" src="/assets/content/mindsky-top.png?v=03"></div></figure>
-        <div class="contentArea padded clearfix">
+    <figure style="background-image:url('/assets/content/mindsky-bg.png');" class="active">
+      <div class="padded">
+        <img class="fill" src="/assets/content/mindsky-top.png?v=03">
+      </div>
+    </figure>
+    <div class="contentArea padded clearfix">
       <h3 class="projectTitle">MindSky</h3>
-          <div class="projectDetails column">
-            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <h4>Technologies Used</h4>
-            <ul>
-              <li>AWS Lambdas</li>
-              <li>AWS EC2</li>
-              <li>Docker</li>
-              <li>Terraform</li>
-              <li>Node.js</li>
-              <li>Vue.js</li>
-              <li>Vuex</li>
-              <li>GraphQL</li>
-              <li>MySQL</li>
-              <li>MongoDB</li>
-            </ul>
-          </div>        
-          <ul class="projectMeta column">
-            <li><a href="#">Launch Project &rarr;</a></li>
-            <li>Lorem Ipsum Ltd.</li>
-            <li>2013</li>
-          </ul>
-        </div>
+      <div class="projectDetails column">
+        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h4>Technologies Used</h4>
+        <ul>
+          <li>AWS Lambdas</li>
+          <li>AWS EC2</li>
+          <li>Docker</li>
+          <li>Terraform</li>
+          <li>Node.js</li>
+          <li>Vue.js</li>
+          <li>Vuex</li>
+          <li>GraphQL</li>
+          <li>MySQL</li>
+          <li>MongoDB</li>
+        </ul>
+      </div>        
+      <ul class="projectMeta column">
+        <li><a href="#">Launch Project &rarr;</a></li>
+        <li>Lorem Ipsum Ltd.</li>
+        <li>2013</li>
+      </ul>
+    </div>
   </section>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
