chore(content): add draft content for mindsky

--- a/index.html
+++ b/index.html
@@ -36,13 +36,7 @@
     <div class="padded">  
       <div id="logo"><a href="//peakshift.com/portfolio"><img src="assets/i/logo.svg"></a></div>
       <h2 style="color: #FFF;margin: 3em 0 0;">We craft digital products for web &amp; mobile.</h2>
-      <p class="intro">From concept and research to design and development, we're a small studio focused on helping you bring your idea to market.</p>
-      <ul class="portfolio">
-        <li>Demo clients</li>
-        <li><a href="/melon" data-fetch="/item/melon.html">Melon:Design</a></li>
-        <li><a href="/huu" data-fetch="/item/huu.html">Hu'u</a></li>
-        <li><a href="/mindsky" data-fetch="/item/mindsky.html">MindSky</a></li>
-      </ul>
+
       <div class="contact-footer typeface-colour-secondary">
         <hr>
         <div class="columns">
@@ -89,9 +83,10 @@
     <div class="contentArea padded clearfix">
       <h3 class="projectTitle">MindSky</h3>
       <div class="projectDetails column">
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>MindSky is an online platform connecting current university students and graduates in Rwanda with employment opportunities.</p>
+
+        <p>Employers post their internships and job opportunities on the MindSky job board. MindSky members apply for openings directly on the platform using our professionally-formatted online profile builder as their application document. Hiring managers log in, view, and sort applications as they come in.</p>
+
         <h4>Technologies Used</h4>
         <ul>
           <li>AWS Lambdas</li>
@@ -107,9 +102,9 @@
         </ul>
       </div>        
       <ul class="projectMeta column">
-        <li><a href="#">Launch Project &rarr;</a></li>
-        <li>Lorem Ipsum Ltd.</li>
-        <li>2013</li>
+        <li><a href="https://www.mindsky.com/" target="_blank">Launch Project &rarr;</a></li>
+        <li>AkilahNet LLC.</li>
+        <li>2016 - 2018</li>
       </ul>
     </div>
   </section>
