--- a/about.html
+++ b/about.html
@@ -75,14 +75,15 @@
   </aside>
   
   <section id="mainContent" class="column">
-    <figure class="active">
-      <div class="padded">
-        <img class="fill" src="/assets/content/team.jpg">
-      </div>
+    <figure style="background-image:url('/assets/content/team.jpg');" class="cover-photo active">
     </figure>
     <div class="contentArea padded clearfix">
       <div class="projectDetails column">
-        <p>"The phenomenon postulating that an extreme type of a favored stimulant is desired more than the normal type of said stimulant" - Peak Shift</p>
+        <blockquote>
+          <p>The phenomenon postulating that an extreme type of a favored stimulant is desired more than the normal type of said stimulant</p>
+          <cite>&mdash; Nugent, Pam M.S.</cite>
+        </blockquote>
+        </p>
 
         <h3>Our Story</h3>
         <p>Peak Shift is a small privately held studio focused on helping our clients bring their ideas to the market, from concept and research to design and development. Officially started in 2012, over the years we have worked on projects from Asia to Europe, North America, the Caribbean and Africa in Hospitality, Retail / Commerce, Education and Blockchain sectors.</p>
