--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div id="wrapper">
   <aside id="mainSide" class="column">
     <div class="padded">  
-      <div id="logo"><a href="//peakshift.com/portfolio"><img src="assets/i/logo.svg"></a></div>
+      <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
       <h2 style="color: #FFF;margin: 1em 0 0;">We craft digital products for web &amp; mobile.</h2>
 
       <div class="contact-footer typeface-colour-secondary">
