--- a/journal.html
+++ b/journal.html
@@ -35,7 +35,7 @@
   <aside id="mainSide" class="column">
     <div class="padded">  
       <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
-      <h2 style="color: #FFF;margin: 1em 0 0;">We craft digital products for web &amp; mobile.</h2>
+      <h2 style="color: #FFF;margin: 1em 0 0;">We craft digital products for web, mobile &amp; blockchain.</h2>
 
       <div class="contact-footer typeface-colour-secondary">
         <hr>
