--- a/about2.html
+++ b/about2.html
@@ -34,8 +34,8 @@
 <div id="wrapper">
   <aside id="mainSide" class="column">
     <div class="padded">  
-      <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
-      <h2 id="portfolioLinks" style="color: #FFF;margin: 1em 0 0;">We craft digital products for <a href="/portfolio/mindsky" data-fetch="/item/mindsky.html">web</a>, <a href="/portfolio/lemariku" data-fetch="/item/lemariku.html">mobile</a> &amp; blockchain.</h2>
+      <div id="logo"><a href="//peakshift.com/portfolio"><img src="assets/i/logo.svg"></a></div>
+      <h2 style="color: #FFF;margin: 1em 0 0;">We craft digital products for web, mobile &amp; blockchain.</h2>
 
       <div class="contact-footer typeface-colour-secondary">
         <hr>
@@ -75,8 +75,6 @@
   </aside>
   
   <section id="mainContent" class="column">
-    <figure style="background-image:url('/assets/content/team.jpg');" class="cover-photo active">
-    </figure>
     <div class="contentArea padded clearfix">
       <div class="projectDetails column">
         <blockquote>
@@ -84,11 +82,17 @@
           <cite>&mdash; Nugent, Pam M.S.</cite>
         </blockquote>
 
+        <div class="imgs">
+          <img id="first" src="/assets/content/johns.jpg"><br/>
+        </div>
         <h3>Our Story</h3>
         <p>Peak Shift is a small privately held studio focused on helping our clients bring their ideas to the market, from concept and research to design and development. Officially started in 2012, over the years we have worked on projects from Asia to Europe, North America, the Caribbean and Africa in Hospitality, Retail / Commerce, Education and Blockchain sectors.</p>
 
         <div class="column">
-          <h3>Our Accomplishments</h3>
+          <div class="imgs">
+            <img id="second" src="/assets/content/Early.jpg"><br/>
+          </div>
+          <h3>Our Triumphs</h3>
           <ul>
             <li>Seen the world.</li>
             <li>Brought a variety of people together.</li>
@@ -97,7 +101,10 @@
             <li>Optimised processes.</li>
           </ul>
 
-          <h3>Our Values</h3>
+          <div class="imgs">
+            <img id="third" src="/assets/content/Selimira.jpg"><br/>
+          </div>
+          <h3>Our Values</h3> 
           <ul>
             <li>Explore the world.</li>
             <li>Learn.</li>
@@ -108,6 +115,9 @@
             <li>Continuous improvement.</li>
           </ul>
 
+          <div class="imgs">
+            <img id="fourth" src="/assets/content/Shazelle.jpg"><br/>
+          </div>
           <h3>Our Mission</h3>
           <ul>
             <li>Do and think innovation no matter where you're from.</li>
@@ -121,12 +131,67 @@
         <li><a href="http://6c59b.peakshift.com/journal/" target="_blank"> Read Our Minds &rarr;</a></li>
         <li>Peak Shift Ltd.</li>
       </ul>
+
+    <!-----Modal images---------->    
+      <div id="myModal" class="modal">
+        <div>
+          <span class="close">x</span>
+          <img src="/assets/content/johns.jpg"><br/>
+          <b> Johns Beharry </b>
+          <p> Principal </p>
+          <p> As the principal of Peak Shift Inc., Johns coordinates the team, leading interface design, development, and integration tasks.<br/>
+          Johns has spent nearly a decade helping businesses and startups with digital design and development services. He founded the Caribbean-based (Saint Lucia) web agency Peak Shift Inc. in 2012, which merges technology and design to solve business problems.</p>
+
+          <p>“Just me, my soylent and my machine”</p>
+        </div>
+      </div>
+      
+      <div id="myModal1" class="modal">
+        <div>
+          <span class="close1">x</span>
+          <img src="/assets/content/Early.jpg"><br/>
+          <b> Early Charelmagne </b>
+          <p> Web Developer </p>
+          <p> Early is a motivated individual with a passion for web technology. He is tasked with the front-end and back-end development of websites.<br/>
+          He recently graduated with a bachelor’s degree in finance at the School of Business and Economics in Amsterdam. Although involved in finance, he has pursued his passion for IT over the years to become a programmer. His practiced finance in the hospitality industry for Sandals, a leading resort in the Caribbean. Thereafter, he started working for Peak Shift Inc., as a web developer.</p>
+
+          <p>“I'm up for anything....just not school”</p>
+        </div>
+      </div>
+
+      <div id="myModal2" class="modal">
+        <div>
+          <span class="close2">x</span>
+          <img src="/assets/content/Selimira.jpg"><br/>
+          <b> Selimira Dimitrova </b>
+          <p> Digital Marketing Strategist </p>
+          <p> Selimira is part of the Peak Shift Inc. team and in charge of optimizing digital marketing efforts as well as web design. <br/>
+          Born in Sofia, Bulgaria, Selimira is currently based in London. She's passionate about exploring as many places and cultures as possible. She enjoys photography and recently found out that she is fascinated by the underwater world, ​so scuba diving and snorkeling have become fun pastimes too.<br/>
+          She has worked with Peak Shift Inc. since January 2015 on multiple projects from various industries. She is studying for a Bachelor of Arts in International Marketing with German at the University of Westminster in London with a focus on brand management, research, expansion strategy, and strategic marketing planning.</p>
+
+          <p>“Thinking of Sun, Sand and Sea” </p>
+        </div>
+      </div>
+
+      <div id="myModal3" class="modal">
+        <div>
+          <span class="close3">x</span>
+          <img src="/assets/content/Shazelle.jpg"><br/>
+          <b> Shazelle Isaacs </b>
+          <p> Junior Web Developer </p>
+          <p> Shazelle is the newest member of the Peak Shift team. Hailing from the beautiful multi-island caribbean nation of St. Vincent &amp; the Grenadines, she is fluent in laughing and sarcasm. She enjoys brain teasers and problem solving which lends to her passion of programming.<br/>
+          She graduated with a bachelor's degree in Computer Science and Management and is currently working on finding her niche in this vast technological world.
+
+          <p>"Ooh, awesome!"</p>
+        </div>
+      </div>
     </div>
   </section>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script src="/assets/js/history.js"></script>
 <script src="/assets/js/router.js"></script>
+<script src="/assets/js/modal.js" type="text/javascript" ></script>
 <script src="/assets/js/scripts.js?v0001"></script>
 </body>
 </html>
