--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div id="wrapper">
   <aside id="mainSide" class="column">
     <div class="padded">  
-      <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
+      <div id="logo"><a href="/" data-fetch="/index.html"><img src="/assets/i/logo.svg"></a></div>
       <h2 style="color: #FFF;margin: 1em 0 0;">We craft digital products for web, mobile &amp; blockchain.</h2>
 
       <div class="contact-footer typeface-colour-secondary">
@@ -110,8 +110,8 @@
   </section>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-<script src="//peakshift.com/routerjs/history.js"></script>
-<script src="//peakshift.com/routerjs/Router.js" type="text/javascript"></script>
+<script src="/assets/js/history.js"></script>
+<script src="/assets/js/router.js"></script>
 <script src="/assets/js/scripts.js?v0001"></script>
 </body>
 </html>
