--- a/item/mindsky.html
+++ b/item/mindsky.html
@@ -1,14 +1,47 @@
-    <figure style="background-image:url('/assets/content/mindsky-bg.png');"><div class="padded"><img class="fill" src="/assets/content/mindsky-top.png?v=03"></div></figure>
-				<div class="contentArea padded clearfix">
-      <h3 class="projectTitle">MindSky</h3>
-					<div class="projectDetails column">
-					<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</div>				
-					<ul class="projectMeta column">
-						<li><a href="#">Launch Project &rarr;</a></li>
-						<li>Lorem Ipsum Ltd.</li>
-						<li>2013</li>
-					</ul>
-				</div>
+  <figure style="background-image:url('/assets/content/mindsky-bg.png');"><div class="padded"><img class="fill" src="/assets/content/mindsky-top.png?v=03"></div></figure>
+	<div class="contentArea padded clearfix">
+    <h3 class="projectTitle">MindSky</h3>
+		<div class="projectDetails column">
+			<p>What do they do: MindSky is an online platform connecting current university students and graduates in Rwanda with employment opportunities.</p>
+
+			<p>Employers post their internships and job opportunities on the MindSky job board. MindSky members apply for openings directly on the platform using our professionally-formatted online profile builder as their application document. Hiring managers log in, view, and sort applications as they come in.</p>
+
+			<p>We currently work exclusively with Akilah Institute, a tertiary institute in Kigali that graduates many of Rwanda’s most talented and high-achieving young women. Additional Rwandan schools and universities will be joining soon, and we will launch throughout East Africa in the near future.</p>
+
+			<div class="column">
+	      <h4>The Problem</h4>
+	          
+      	<h4>The Solution</h4>
+   			
+   			<h4>Technologies Used</h4>
+        <ul>
+          <li>AWS Lambdas</li>
+          <li>AWS EC2</li>
+          <li>Docker</li>
+          <li>Terraform</li>
+          <li>Node.js</li>
+          <li>Vue.js</li>
+          <li>Vuex</li>
+          <li>GraphQL</li>
+          <li>MySQL</li>
+          <li>MongoDB</li>
+        </ul>
+
+      	<h4>Testimonials</h4>
+      	<blockquote>
+			  	<p>The phenomenon postulating that an extreme type of a favored stimulant is desired more than the normal type of said stimulant</p>
+			  	<cite>&mdash; Nugent, Pam M.S.</cite>
+	      </blockquote>
+
+	      <blockquote>
+        	<p>The phenomenon postulating that an extreme type of a favored stimulant is desired more than the normal type of said stimulant</p>
+        	<cite>&mdash; Nugent, Pam M.S.</cite>
+	      </blockquote>
+	    </div>
+		</div>				
+		<ul class="projectMeta column">
+      <li><a href="https://www.mindsky.com/" target="_blank">Launch Project &rarr;</a></li>
+      <li>AkilahNet LLC.</li>
+      <li>2016 - 2018</li>
+	  </ul>
+	</div>
