chore(team-section): replace background image with team portraits at the top of about page

--- a/about.html
+++ b/about.html
@@ -162,8 +162,8 @@
           <p>"Ooh, awesome!"</p>
         </div>
       </div>
-      
-    <div class="contentArea padded clearfix">
+
+    <div class="contentArea padded clearfix" style="padding-top: 0;">
       <div class="projectDetails column">
         <blockquote>
           <p>The phenomenon postulating that an extreme type of a favored stimulant is desired more than the normal type of said stimulant</p>
