chore(about-us): change team section position and add header image

--- a/about.html
+++ b/about.html
@@ -75,8 +75,55 @@
   </aside>
   
   <section id="mainContent" class="column">
-    <figure class="active">
-      <h1 id="team"> Meet the team </h1>
+    <figure style="background-image:url('/assets/content/team.jpg');" class="cover-photo active"></figure>
+
+    <div class="contentArea padded clearfix">
+      <div class="projectDetails column">
+        <blockquote>
+          <p>The phenomenon postulating that an extreme type of a favored stimulant is desired more than the normal type of said stimulant</p>
+          <cite>&mdash; Nugent, Pam M.S.</cite>
+        </blockquote>
+
+        <h3>Our Story</h3>
+        <p>Peak Shift is a small privately held studio focused on helping our clients bring their ideas to the market, from concept and research to design and development. Officially started in 2012, over the years we have worked on projects from Asia to Europe, North America, the Caribbean and Africa in Hospitality, Retail / Commerce, Education and Blockchain sectors.</p>
+
+        <div class="column">
+          <h3>Our Accomplishments</h3>
+          <ul>
+            <li>Seen the world.</li>
+            <li>Brought a variety of people together.</li>
+            <li>Worked on platforms aiming to bring economical growth for "the average person" in developing counties.</li>
+            <li>Opened opportunities for others.</li>
+            <li>Optimised processes.</li>
+          </ul>
+
+          <h3>Our Values</h3>
+          <ul>
+            <li>Explore the world.</li>
+            <li>Learn.</li>
+            <li>Be resourceful. Find a way.</li>
+            <li>Unrelenting.</li>
+            <li>Inspire others.</li>
+            <li>Collaborate.</li>
+            <li>Continuous improvement.</li>
+          </ul>
+
+          <h3>Our Mission</h3>
+          <ul>
+            <li>Do and think innovation no matter where you're from.</li>
+            <li>Help ease access to tools that can bring economical growth to individuals.</li>
+            <li>Make and foster connections.</li>
+            <li><strong>Be excellent.</strong></li>
+          </ul>
+        </div> 
+      </div>        
+      <ul class="projectMeta column">
+        <li><a href="/journal" target="_blank"> Read Our Minds &rarr;</a></li>
+        <li>Peak Shift Ltd.</li>
+      </ul>
+    </div>
+    <figure class="active padded">
+      <h1> Meet the team </h1>
       <div id="first" class="card">
         <img src="/assets/content/johns.jpg" style="width:80%;" alt="Johns Beharry">
         <div class="container">
@@ -105,7 +152,7 @@
         <img src="/assets/content/Shazelle.png" style="width:80%;" alt="Shazelle Isaacs">
         <div class="container">
           <h4><b>Shazelle Isaacs</b></h4> 
-          <p>Junior Web Developer</p>
+          <p>Web Developer</p>
         </div>
       </div>
     </figure>
@@ -162,57 +209,12 @@
           <p>"Ooh, awesome!"</p>
         </div>
       </div>
-
-    <div class="contentArea padded clearfix" style="padding-top: 0;">
-      <div class="projectDetails column">
-        <blockquote>
-          <p>The phenomenon postulating that an extreme type of a favored stimulant is desired more than the normal type of said stimulant</p>
-          <cite>&mdash; Nugent, Pam M.S.</cite>
-        </blockquote>
-
-        <h3>Our Story</h3>
-        <p>Peak Shift is a small privately held studio focused on helping our clients bring their ideas to the market, from concept and research to design and development. Officially started in 2012, over the years we have worked on projects from Asia to Europe, North America, the Caribbean and Africa in Hospitality, Retail / Commerce, Education and Blockchain sectors.</p>
-
-        <div class="column">
-          <h3>Our Accomplishments</h3>
-          <ul>
-            <li>Seen the world.</li>
-            <li>Brought a variety of people together.</li>
-            <li>Worked on platforms aiming to bring economical growth for "the average person" in developing counties.</li>
-            <li>Opened opportunities for others.</li>
-            <li>Optimised processes.</li>
-          </ul>
-
-          <h3>Our Values</h3>
-          <ul>
-            <li>Explore the world.</li>
-            <li>Learn.</li>
-            <li>Be resourceful. Find a way.</li>
-            <li>Unrelenting.</li>
-            <li>Inspire others.</li>
-            <li>Collaborate.</li>
-            <li>Continuous improvement.</li>
-          </ul>
-
-          <h3>Our Mission</h3>
-          <ul>
-            <li>Do and think innovation no matter where you're from.</li>
-            <li>Help ease access to tools that can bring economical growth to individuals.</li>
-            <li>Make and foster connections.</li>
-            <li><strong>Be excellent.</strong></li>
-          </ul>
-        </div> 
-      </div>        
-      <ul class="projectMeta column">
-        <li><a href="/journal" target="_blank"> Read Our Minds &rarr;</a></li>
-        <li>Peak Shift Ltd.</li>
-      </ul>
-    </div>
   </section>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script src="/assets/js/history.js"></script>
 <script src="/assets/js/router.js"></script>
+<script src="/assets/js/modal.js"></script>
 <script src="/assets/js/scripts.js?v0001"></script>
 </body>
 </html>
