style(journal):add some old journal styles to new journal template

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
       <div class="projectDetails column">
         <blockquote>
           <p>The phenomenon postulating that an extreme type of a favored stimulant is desired more than the normal type of said stimulant</p>
-          <cite>&mdash; Nugent, Pam M.S.</cite>
+          <cite>Nugent, Pam M.S.</cite>
         </blockquote>
 
         <h3>Our Story</h3>
@@ -157,7 +157,7 @@
       </div>
     </figure>
     <!-----Modal images---------->    
-      <div id="myModal" class="modal">
+      <div id="myModal" class="team-modal">
         <div>
           <span class="close">x</span>
           <img src="/assets/content/johns.jpg"><br/>
@@ -170,7 +170,7 @@
         </div>
       </div>
       
-      <div id="myModal1" class="modal">
+      <div id="myModal1" class="team-modal">
         <div>
           <span class="close1">x</span>
           <img src="/assets/content/Early.jpg"><br/>
@@ -183,7 +183,7 @@
         </div>
       </div>
 
-      <div id="myModal2" class="modal">
+      <div id="myModal2" class="team-modal">
         <div>
           <span class="close2">x</span>
           <img src="/assets/content/Selimira.jpg"><br/>
@@ -197,7 +197,7 @@
         </div>
       </div>
 
-      <div id="myModal3" class="modal">
+      <div id="myModal3" class="team-modal">
         <div>
           <span class="close3">x</span>
           <img src="/assets/content/Shazelle.png"><br/>
