--- a/journal.html
+++ b/journal.html
@@ -87,7 +87,42 @@
             <cite>adjective</cite>
           </blockquote>
 
-          <h4>Technologies Used</h4>
+          <h2>Header Level 2</h2>
+
+          <code data-type="solidity">
+            <pre>
+pragma solidity ^0.4.21;
+pragma experimental "v0.5.0";
+
+
+/** @title Invoicing Contract */
+contract Invoicing {
+
+    address public owner;
+    int public disputePeriod;
+
+    /**
+     * Constructor function runs once upon contract creation
+     */
+    function Invoicing() public {
+        owner = msg.sender;
+        disputePeriod = 5;
+    }
+
+}
+            </pre>
+          </code>
+
+          <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+
+          <h3>Header Level 3</h3>
+
+          <ol>
+            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+            <li>Aliquam tincidunt mauris eu risus.</li>
+          </ol>
+
+          <h4>Header Level 4</h4>
           <ul>
             <li>AWS Lambdas</li>
             <li>AWS EC2</li>
