style(typography): enlarge article title (#8)

--- a/journal.html
+++ b/journal.html
@@ -76,7 +76,7 @@
   
   <section id="mainContent" class="column">
     <div class="contentArea padded clearfix">
-      <h2 class="projectTitle">The state of publishing: Lorem ipsum dolor sit amet, consectetur adipisicing</h2>
+      <h2 class="articleTitle">The state of publishing: Lorem ipsum dolor sit amet, consectetur adipisicing</h2>
       <article class="projectDetails column">
         <div class="entry_content">
          <p>MindSky is an online <a href="#">platform</a> connecting current university students and graduates in Rwanda with employment opportunities .</p>
