--- a/journal.html
+++ b/journal.html
@@ -28,6 +28,23 @@
 <!-- The Styles -->
 <link href="assets/css/master.css?v=0004" rel="stylesheet" type="text/css">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-6502879-7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-6502879-7');
+</script>
+<!-- End Google Analytics -->
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TPS5PB');</script>
+<!-- End Google Tag Manager -->
 </head>
 <body class="">
 
@@ -172,5 +189,9 @@
 <script src="//peakshift.com/routerjs/history.js"></script>
 <script src="//peakshift.com/routerjs/Router.js" type="text/javascript"></script>
 <script src="/assets/js/scripts.js?v0001"></script>
+<!-- Google Tag Manager -->
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-TPS5PB"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager -->
 </body>
 </html>
