--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <aside id="mainSide" class="column">
     <div class="padded">  
       <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
-      <h2 id="portfolioLinks" style="color: #FFF;margin: 1em 0 0;">We craft digital products for <a href="/portfolio/mindsky" data-fetch="/item/mindsky.html">web</a>, <a href="/portfolio/lemariku" data-fetch="/item/lemariku.html">mobile</a> &amp; blockchain.</h2>
+      <h2 id="portfolioLinks" style="color: #FFF;margin: 1em 0 0;">We craft digital products built on <a href="/portfolio/mindsky" data-fetch="/item/mindsky.html">web</a>, <a href="/portfolio/lemariku" data-fetch="/item/lemariku.html">mobile</a> &amp; blockchain.</h2>
 
       <div class="contact-footer typeface-colour-secondary">
         <hr>
