chore(SEO): update title tags and closes #3 mobile first design

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
 <!-- META: seo -->
 
-<title>Peak Shift Ltd.</title>
+<title>Blockchain Product Design &amp; Development Studio</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
 <meta name="author" content="Peak Shift Inc.">
