--- a/journal.html
+++ b/journal.html
@@ -17,7 +17,7 @@
 
 <!-- META: seo -->
 
-<title>Peak Shift Ltd.</title>
+<title>Thoughts: Peak Shift Ltd.</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
 <meta name="author" content="Peak Shift Inc.">
