--- a/journal.html
+++ b/journal.html
@@ -98,8 +98,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="entry_content">
                <p>MindSky is an online <a href="#">platform</a> connecting current university students and graduates in Rwanda with employment opportunities .</p>
 
-               <figure class="exdent active">
-                  <img src="/assets/i/sketch.png">
+               <figure class=" exdent active">
+                  <img class="fill" src="/assets/i/sketch.png">
                </figure>
 
                <p>Employers post their internships and job opportunities on the MindSky job board. MindSky members apply for openings directly on the platform using our professionally-formatted online profile builder as their application document. Hiring managers log in, view, and sort applications as they come in.</p>
