chore(styles): move inline styles to external stylesheet (#12)

--- a/item/huu.html
+++ b/item/huu.html
@@ -1,13 +1,17 @@
-				<figure style="background-image:url('/assets/content/blur-huu.jpg');"><div class="padded"><img class="fill" src="/assets/content/huu.png"></div></figure>
-				<div class="contentArea padded clearfix">
-					<h3 class="projectTitle">Hu'u</h3>
-					<div class="projectDetails column">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-					</div>				
-					<ul class="projectMeta column">
-						<li><a href="#">Launch Project &rarr;</a></li>
-						<li>Lorem Ipsum Ltd.</li>
-						<li>2013</li>
-					</ul>
-				</div>
+	<figure style="background-image:url('/assets/content/blur-huu.jpg');">
+		<div class="padded">
+			<img class="fill" src="/assets/content/huu.png">
+		</div>
+	</figure>
+	<div class="contentArea padded clearfix">
+		<h3 class="projectTitle">Hu'u</h3>
+		<div class="projectDetails column">
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+		</div>				
+		<ul class="projectMeta column">
+			<li><a href="#">Launch Project &rarr;</a></li>
+			<li>Lorem Ipsum Ltd.</li>
+			<li>2013</li>
+		</ul>
+	</div>
