--- a/item/mindsky.html
+++ b/item/mindsky.html
@@ -1,4 +1,8 @@
-  <figure style="background-image:url('/assets/content/mindsky-bg.png');"><div class="padded"><img class="fill" src="/assets/content/mindsky-top.png?v=03"></div></figure>
+  <figure style="background-image:url('/assets/content/mindsky-bg.png');">
+    <div class="padded">
+      <img class="fill" src="/assets/content/mindsky-top.png?v=03">
+    </div>
+  </figure>
 	<div class="contentArea padded clearfix">
     <h3 class="projectTitle">MindSky</h3>
 		<div class="projectDetails column">
