--- a/item/pkf.html
+++ b/item/pkf.html
@@ -1,10 +1,14 @@
-				<figure style="background-image:url('/assets/content/blur-pkf.jpg');"><div class="padded"><img class="fill" src="/assets/content/pkf.png"></div></figure>
-				<div class="padded">
-					<h3 class="projectTitle">PKF: Corporate Services</h3>
-					<div class="projectDetails column"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>				
-					<ul class="projectMeta column">
-						<li><a href="#">Launch Project &rarr;</a></li>
-						<li>Lorem Ipsum Ltd.</li>
-						<li>2013</li>
-					</ul>
-				</div>
+	<figure style="background-image:url('/assets/content/blur-pkf.jpg');">
+		<div class="padded">
+			<img class="fill" src="/assets/content/pkf.png">
+		</div>
+	</figure>
+	<div class="padded">
+		<h3 class="projectTitle">PKF: Corporate Services</h3>
+		<div class="projectDetails column"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>				
+		<ul class="projectMeta column">
+			<li><a href="#">Launch Project &rarr;</a></li>
+			<li>Lorem Ipsum Ltd.</li>
+			<li>2013</li>
+		</ul>
+	</div>
