--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <aside id="mainSide" class="column">
     <div class="padded">  
       <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
-      <h2 id="portfolioLinks" style="color: #FFF;margin: 1em 0 0;">We craft digital products built on <a href="/portfolio/mindsky" data-fetch="/item/mindsky.html">web</a>, <a href="/portfolio/lemariku" data-fetch="/item/lemariku.html">mobile</a> &amp; blockchain.</h2>
+      <h2 id="portfolioLinks">We craft digital products built on <a href="/portfolio/mindsky" data-fetch="/item/mindsky.html">web</a>, <a href="/portfolio/lemariku" data-fetch="/item/lemariku.html">mobile</a> &amp; blockchain.</h2>
 
       <div class="contact-footer typeface-colour-secondary">
         <hr>
@@ -86,7 +86,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <img src="/assets/icons/facebook.svg" width="16" height="16">
             </a>
             <a href="//dribbble.com/jb">
-              <img src="/assets/icons/dribbble.svg" width="16" height="14" style="padding:2px 1 0;">
+              <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14">
             </a>
           </p>
         </div>
@@ -146,7 +146,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <figure class="active padded">
       <h1> Meet the team </h1>
       <div id="first" class="card">
-        <img src="/assets/content/johns.jpg" style="width:80%;" alt="Johns Beharry">
+        <img src="/assets/content/johns.jpg" alt="Johns Beharry">
         <div class="container">
           <h4><b>Johns Beharry</b></h4> 
           <p>Principal</p> 
@@ -154,7 +154,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
 
       <div id="second" class="card">
-        <img src="/assets/content/Early.jpg" style="width:80%;" alt="Early Charlemagne">
+        <img src="/assets/content/Early.jpg" alt="Early Charlemagne">
         <div class="container">
           <h4><b>Early Charlemagne</b></h4> 
           <p>Web Developer</p> 
@@ -162,7 +162,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
 
       <div id="third" class="card">
-        <img src="/assets/content/Selimira.jpg" style="width:80%;" alt="Selimira Dimitrova">
+        <img src="/assets/content/Selimira.jpg" alt="Selimira Dimitrova">
         <div class="container">
           <h4><b>Selimira Dimitrova</b></h4> 
           <p>Digital Marketing Strategist</p>
@@ -170,7 +170,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
 
       <div id="fourth" class="card">
-        <img src="/assets/content/Shazelle.png" style="width:80%;" alt="Shazelle Isaacs">
+        <img src="/assets/content/Shazelle.png" alt="Shazelle Isaacs">
         <div class="container">
           <h4><b>Shazelle Isaacs</b></h4> 
           <p>Web Developer</p>
@@ -238,8 +238,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script src="/assets/js/modal.js"></script>
 <script src="/assets/js/scripts.js?v0001"></script>
 <!-- Google Tag Manager -->
-<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-TPS5PB"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<noscript><iframe class="gtm" src="//www.googletagmanager.com/ns.html?id=GTM-TPS5PB"
+height="0" width="0"></iframe></noscript>
 <!-- End Google Tag Manager -->
 </body>
 </html>
