--- a/journal.html
+++ b/journal.html
@@ -52,7 +52,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
    <aside id="mainSide" class="column">
       <div class="padded">  
          <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
-         <h2 id="portfolioLinks" style="color: #FFF;margin: 1em 0 0;">We craft digital products built on <a href="/portfolio/mindsky" data-fetch="/item/mindsky.html">web</a>, <a href="/portfolio/lemariku" data-fetch="/item/lemariku.html">mobile</a> &amp; blockchain.</h2>
+         <h2 id="portfolioLinks">We craft digital products built on <a href="/portfolio/mindsky" data-fetch="/item/mindsky.html">web</a>, <a href="/portfolio/lemariku" data-fetch="/item/lemariku.html">mobile</a> &amp; blockchain.</h2>
 
          <div class="contact-footer typeface-colour-secondary">
             <hr>
@@ -82,7 +82,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <img src="/assets/icons/facebook.svg" width="16" height="16">
                   </a>
                   <a href="//dribbble.com/jb">
-                    <img src="/assets/icons/dribbble.svg" width="16" height="14" style="padding:2px 1 0;">
+                    <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14">
                   </a>
                </p>
             </div>
@@ -190,8 +190,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script src="//peakshift.com/routerjs/Router.js" type="text/javascript"></script>
 <script src="/assets/js/scripts.js?v0001"></script>
 <!-- Google Tag Manager -->
-<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-TPS5PB"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<noscript><iframe class="gtm" src="//www.googletagmanager.com/ns.html?id=GTM-TPS5PB"
+height="0" width="0"></iframe></noscript>
 <!-- End Google Tag Manager -->
 </body>
 </html>
