--- a/about.html
+++ b/about.html
@@ -238,8 +238,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script src="/assets/js/modal.js"></script>
 <script src="/assets/js/scripts.js?v0001"></script>
 <!-- Google Tag Manager -->
-<noscript><iframe class="gtm" src="//www.googletagmanager.com/ns.html?id=GTM-TPS5PB"
-height="0" width="0"></iframe></noscript>
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-TPS5PB"
+height="0" width="0" style="display:none; visibility:hidden; "></iframe></noscript>
 <!-- End Google Tag Manager -->
 </body>
 </html>
