--- a/about.html
+++ b/about.html
@@ -27,6 +27,20 @@
 <meta name="copyright" content="Copyright (c) 2012 Peak Shift Inc.">
 <meta name="revisit-after" content="3 days">
 
+<meta property="og:url" content="" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Blockchain Product Design &amp; Development Studio" />
+<meta property="og:image" content="" />
+<meta property="og:site_name" content="Peak Shift Ltd." />
+<meta property="og:description" content="" />
+
+<meta name="twitter:card" content="photo" />
+<meta name="twitter:site" content="@peakshift" />
+<meta name="twitter:title" content="Blockchain Product Design &amp; Development Studio">
+<meta name="twitter:image" content="">
+<meta name="twitter:image:width" content="1200" />
+<meta name="twitter:image:height" content="630" />
+
 <!-- The Styles -->
 <link href="assets/css/master.css?v=0004" rel="stylesheet" type="text/css">
 
